syntax = "proto3";

option go_package = "pb";

package pb;

message Empty {}

// MovieInfo holds the movie details
message MovieInfo {
  string id = 1;
  string isbn = 2;
  string title = 3;
  Director director = 4;
}

// Director holds the director details
message Director {
  string firstname = 1;
  string lastname = 2;
}

// Id has a value
message Id {
  string value = 1;
}

// Status has a value
message Status {
  int32 value = 1;
}

// MovieService provides the unary functions that server needs to implement
service MovieService {
  rpc GetMovies(Empty) returns (stream MovieInfo) {};
  rpc GetMovie(Id) returns (MovieInfo){};
  rpc CreateMovie(MovieInfo) returns (Id) {};
  rpc UpdateMovie(MovieInfo) returns (Status) {};
  rpc DeleteMovie(Id) returns (Status) {};
}